--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -11,5 +11,7 @@
   "Главная": "Main",
   "О сайте": "About us",
   "Переключить": "Переключить",
-  "Короткий язык": "En"
+  "Короткий язык": "En",
+  "Введите username": "Введите username",
+  "Введите пароль": "Введите пароль"
 }
