--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -11,5 +11,7 @@
   "Главная": "Главная",
   "О сайте": "О сайте",
   "Переключить": "Переключить",
-  "Короткий язык": "Ru"
+  "Короткий язык": "Ru",
+  "Введите username": "Введите username",
+  "Введите пароль": "Введите пароль"
 }
