--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -13,5 +13,8 @@
   "Переключить": "Переключить",
   "Короткий язык": "Ru",
   "Введите username": "Введите username",
-  "Введите пароль": "Введите пароль"
+  "Введите пароль": "Введите пароль",
+  "Форма авторизации": "Форма авторизации",
+  "Вы ввели неверный логин или пароль": "Вы ввели неверный логин или пароль",
+  "Выйти": "Выйти"
 }
