--- a/public/locales/ru/profile.json
+++ b/public/locales/ru/profile.json
@@ -8,5 +8,7 @@
   "Отменить": "Отменить",
   "Сохранить": "Сохранить",
   "Ваш возраст": "Ваш возраст",
-  "Город": "Город"
+  "Город": "Город",
+  "Введите имя пользователя": "Введите имя пользователя",
+  "Введите ссылку на аватар": "Введите ссылку на аватар"
 }
