add comment list

--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -19,5 +19,6 @@
   "Выйти": "Выйти",
   "Укажите валюту": "Укажите валюту",
   "Укажите страну": "Укажите страну",
-  "Копировать": "Копировать"
+  "Копировать": "Копировать",
+  "Комментарии отсутствуют": "Комментарии отсутствуют"
 }
