--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -12,6 +12,9 @@
   "О сайте": "О сайте",
   "Переключить": "Переключить",
   "Короткий язык": "Ru",
+  "Войти": "Войти",
+  "increment": "increment",
+  "decrement": "decrement",
   "Введите username": "Введите username",
   "Введите пароль": "Введите пароль",
   "Форма авторизации": "Форма авторизации",
@@ -19,6 +22,11 @@
   "Выйти": "Выйти",
   "Укажите валюту": "Укажите валюту",
   "Укажите страну": "Укажите страну",
-  "Копировать": "Копировать",
+  "Профиль": "Профиль",
+  "Статья не найдена": "Статья не найдена",
+  "Статьи": "Статьи",
+  "Произошла ошибка при загрузке статьи": {
+    "": "Произошла ошибка при загрузке статьи."
+  },
   "Комментарии отсутствуют": "Комментарии отсутствуют"
 }
