--- a/public/locales/en/article-details.json
+++ b/public/locales/en/article-details.json
@@ -1,4 +1,4 @@
 {
-  "Статья не найдена": "Статья не найдена",
-  "Комментарий": "Комментарий"
+  "Статья не найдена": "Article not found",
+  "Комментарии": "Комментарии"
 }
