--- a/public/locales/en/profile.json
+++ b/public/locales/en/profile.json
@@ -1,19 +1,20 @@
 {
-  "Профиль": "Профиль",
-  "Редактировать": "Редактировать",
-  "Ваше имя": "Ваше имя",
-  "Ваша фамилия": "Ваша фамилия",
-  "Произошла ошибка при загрузке профиля": "Произошла ошибка при загрузке профиля",
-  "Попробуйте обновить страницу": "Попробуйте обновить страницу",
-  "Отменить": "Отменить",
-  "Сохранить": "Сохранить",
-  "Ваш возраст": "Ваш возраст",
-  "Город": "Город",
-  "Введите имя пользователя": "Введите имя пользователя",
-  "Введите ссылку на аватар": "Введите ссылку на аватар",
-  "Серверная ошибка при сохранении": "Серверная ошибка при сохранении",
-  "Некорректный регион": "Некорректный регион",
-  "Данные не указаны": "Данные не указаны",
-  "Имя и фамилия обязательны": "Имя и фамилия обязательны",
-  "Некорретный возраст": "Некорретный возраст"
+  "Профиль": "Profile",
+  "Редактировать": "Edit",
+  "Ваша фамилия": "Your lastname",
+  "Ваше имя": "Your name",
+  "Произошла ошибка при загрузке профиля": "Upload error",
+  "Попробуйте обновить страницу": "Try to update page",
+  "Отменить": "Cancel",
+  "Сохранить": "Save",
+  "Город": "City",
+  "Ваш возраст": "Your age",
+  "Имя пользователя": "Username",
+  "Введите имя пользователя": "Input username",
+  "Введите ссылку на аватар": "Input avatar link",
+  "Серверная ошибка при сохранении": "Server error when saving",
+  "Некорректный регион": "Invalid region",
+  "Имя и фамилия обязательны": "First and last name are required",
+  "Данные не указаны": "Data is not specified",
+  "Некорректный возраст": "Incorrect age"
 }
