--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -5,20 +5,28 @@
   "Язык": "English",
   "новый перевод": "новый перевод",
   "Страница не найдена": "Page not found",
-  "Произошла непредвиденная ошибка": "Произошла непредвиденная ошибка",
+  "Произошла непредвиденная ошибка": "An unexpected error has occurred",
   "Обновить страницу": "Reload page",
   "throw error": "throw error",
   "Главная": "Main",
   "О сайте": "About us",
   "Переключить": "Переключить",
   "Короткий язык": "En",
-  "Введите username": "Введите username",
-  "Введите пароль": "Введите пароль",
-  "Форма авторизации": "Форма авторизации",
-  "Вы ввели неверный логин или пароль": "Вы ввели неверный логин или пароль",
-  "Выйти": "Выйти",
-  "Укажите валюту": "Укажите валюту",
-  "Укажите страну": "Укажите страну",
-  "Копировать": "Копировать",
+  "Войти": "Login",
+  "increment": "increment",
+  "decrement": "decrement",
+  "Введите username": "Enter username",
+  "Введите пароль": "Enter password",
+  "Форма авторизации": "Auth form",
+  "Вы ввели неверный логин или пароль": "Incorrect username or password",
+  "Выйти": "Logout",
+  "Укажите валюту": "Choose currency",
+  "Укажите страну": "Choose country",
+  "Профиль": "Profile",
+  "Статья не найдена": "Статья не найдена",
+  "Статьи": "Articles",
+  "Произошла ошибка при загрузке статьи": {
+    "": "Произошла ошибка при загрузке статьи."
+  },
   "Комментарии отсутствуют": "Комментарии отсутствуют"
 }
