--- a/public/locales/ru/profile.json
+++ b/public/locales/ru/profile.json
@@ -1,19 +1,20 @@
 {
   "Профиль": "Профиль",
   "Редактировать": "Редактировать",
-  "Ваше имя": "Ваше имя",
   "Ваша фамилия": "Ваша фамилия",
+  "Ваше имя": "Ваше имя",
   "Произошла ошибка при загрузке профиля": "Произошла ошибка при загрузке профиля",
   "Попробуйте обновить страницу": "Попробуйте обновить страницу",
   "Отменить": "Отменить",
   "Сохранить": "Сохранить",
-  "Ваш возраст": "Ваш возраст",
   "Город": "Город",
+  "Ваш возраст": "Ваш возраст",
+  "Имя пользователя": "Имя пользователя",
   "Введите имя пользователя": "Введите имя пользователя",
   "Введите ссылку на аватар": "Введите ссылку на аватар",
   "Серверная ошибка при сохранении": "Серверная ошибка при сохранении",
   "Некорректный регион": "Некорректный регион",
-  "Данные не указаны": "Данные не указаны",
   "Имя и фамилия обязательны": "Имя и фамилия обязательны",
-  "Некорретный возраст": "Некорретный возраст"
+  "Данные не указаны": "Данные не указаны",
+  "Некорректный возраст": "Некорректный возраст"
 }
