add filters, sort, search

--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -30,5 +30,17 @@
   },
   "Комментарии отсутствуют": "Комментарии отсутствуют",
   "Введите текст комментария": "Введите текст комментария",
-  "Отправить": "Отправить"
+  "Отправить": "Отправить",
+  "Сортировать ПО": "Сортировать ПО",
+  "Поиск": "Поиск",
+  "по": "по",
+  "просмотрам": "просмотрам",
+  "названию": "названию",
+  "дате создания": "дате создания",
+  "убыванию": "убыванию",
+  "возрастанию": "возрастанию",
+  "Все статьи": "Все статьи",
+  "Айти": "Айти",
+  "Экономика": "Экономика",
+  "Наука": "Наука"
 }
