--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -42,5 +42,11 @@
   "Все статьи": "Все статьи",
   "Айти": "Айти",
   "Экономика": "Экономика",
-  "Наука": "Наука"
+  "Наука": "Наука",
+  "Редактирование статьи с ID = ": "Редактирование статьи с ID = ",
+  "Создание новой статьи": "Создание новой статьи",
+  "Редактирование статьи с ID = ${id}": "Редактирование статьи с ID = ${id}",
+  "Редактирование статьи с ID": "Редактирование статьи с ID",
+  "John Doe": "John Doe",
+  "Создать статью": "Создать статью"
 }
