--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -48,5 +48,6 @@
   "Редактирование статьи с ID = ${id}": "Редактирование статьи с ID = ${id}",
   "Редактирование статьи с ID": "Редактирование статьи с ID",
   "John Doe": "John Doe",
-  "Создать статью": "Создать статью"
+  "Создать статью": "Создать статью",
+  "short": "short"
 }
