--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -10,7 +10,7 @@
   "throw error": "throw error",
   "Главная": "Main",
   "О сайте": "About us",
-  "Переключить": "Переключить",
+  "Переключить": "Toggle",
   "Короткий язык": "En",
   "Войти": "Login",
   "increment": "increment",
@@ -23,31 +23,29 @@
   "Укажите валюту": "Choose currency",
   "Укажите страну": "Choose country",
   "Профиль": "Profile",
-  "Статья не найдена": "Статья не найдена",
+  "Статья не найдена": "Article not found",
   "Статьи": "Articles",
   "Произошла ошибка при загрузке статьи": {
     "": "Произошла ошибка при загрузке статьи."
   },
-  "Комментарии отсутствуют": "Комментарии отсутствуют",
-  "Введите текст комментария": "Введите текст комментария",
-  "Отправить": "Отправить",
-  "Сортировать ПО": "Сортировать ПО",
-  "Поиск": "Поиск",
-  "по": "по",
-  "просмотрам": "просмотрам",
-  "названию": "названию",
-  "дате создания": "дате создания",
-  "убыванию": "убыванию",
-  "возрастанию": "возрастанию",
-  "Все статьи": "Все статьи",
-  "Айти": "Айти",
-  "Экономика": "Экономика",
-  "Наука": "Наука",
-  "Редактирование статьи с ID = ": "Редактирование статьи с ID = ",
-  "Создание новой статьи": "Создание новой статьи",
-  "Редактирование статьи с ID = ${id}": "Редактирование статьи с ID = ${id}",
-  "Редактирование статьи с ID": "Редактирование статьи с ID",
+  "Комментарии отсутствуют": "There are no comments",
+  "Введите текст комментария": "Enter the comment text",
+  "Отправить": "Send",
+  "Поиск": "Search",
+  "возрастанию": "ascending",
+  "по": "in",
+  "убыванию": "descending",
+  "Айти": "IT",
+  "Экономика": "Economics",
+  "Все статьи": "All articles",
+  "Наука": "Science",
+  "Сортировать ПО": "Sort BY",
+  "дате создания": "created date",
+  "названию": "name",
+  "просмотрам": "views",
+  "Создание новой статьи": "Create new article",
+  "Редактирование статьи с ID = ": "Edit article with ID = ",
   "John Doe": "John Doe",
-  "Создать статью": "Создать статью",
-  "short": "short"
+  "Создать статью": "Create article"
 }
+
