--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -31,23 +31,22 @@
   "Комментарии отсутствуют": "Комментарии отсутствуют",
   "Введите текст комментария": "Введите текст комментария",
   "Отправить": "Отправить",
-  "Сортировать ПО": "Сортировать ПО",
   "Поиск": "Поиск",
-  "по": "по",
-  "просмотрам": "просмотрам",
-  "названию": "названию",
-  "дате создания": "дате создания",
-  "убыванию": "убыванию",
   "возрастанию": "возрастанию",
-  "Все статьи": "Все статьи",
+  "по": "по",
+  "убыванию": "убыванию",
   "Айти": "Айти",
   "Экономика": "Экономика",
+  "Все статьи": "Все статьи",
   "Наука": "Наука",
-  "Редактирование статьи с ID = ": "Редактирование статьи с ID = ",
+  "Сортировать ПО": "Сортировать ПО",
+  "дате создания": "дате создания",
+  "названию": "названию",
+  "просмотрам": "просмотрам",
   "Создание новой статьи": "Создание новой статьи",
-  "Редактирование статьи с ID = ${id}": "Редактирование статьи с ID = ${id}",
-  "Редактирование статьи с ID": "Редактирование статьи с ID",
+  "Редактирование статьи с ID = ": "Редактирование статьи с ID = ",
   "John Doe": "John Doe",
-  "Создать статью": "Создать статью",
-  "short": "short"
+  "Создать статью": "Создать статью"
 }
+
+
