add dropdown, update navbar, add avatar with menu

--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -46,6 +46,7 @@
   "Создание новой статьи": "Create new article",
   "Редактирование статьи с ID = ": "Edit article with ID = ",
   "John Doe": "John Doe",
-  "Создать статью": "Create article"
+  "Создать статью": "Create article",
+  "Профиль пользователя": "Профиль пользователя"
 }
 
