--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -46,7 +46,8 @@
   "Создание новой статьи": "Создание новой статьи",
   "Редактирование статьи с ID = ": "Редактирование статьи с ID = ",
   "John Doe": "John Doe",
-  "Создать статью": "Создать статью"
+  "Создать статью": "Создать статью",
+  "Профиль пользователя": "Профиль пользователя"
 }
 
 
