add rtk query api, inject article recommendations , refactoring

--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -47,6 +47,7 @@
   "Редактирование статьи с ID = ": "Edit article with ID = ",
   "John Doe": "John Doe",
   "Создать статью": "Create article",
-  "Профиль пользователя": "Профиль пользователя"
+  "Профиль пользователя": "Профиль пользователя",
+  "Ошибка при загрузке статей": "Ошибка при загрузке статей"
 }
 
