--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -47,7 +47,8 @@
   "Редактирование статьи с ID = ": "Редактирование статьи с ID = ",
   "John Doe": "John Doe",
   "Создать статью": "Создать статью",
-  "Профиль пользователя": "Профиль пользователя"
+  "Профиль пользователя": "Профиль пользователя",
+  "Ошибка при загрузке статей": "Ошибка при загрузке статей"
 }
 
 
