add private route with required roles

--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -48,6 +48,7 @@
   "John Doe": "John Doe",
   "Создать статью": "Create article",
   "Профиль пользователя": "Профиль пользователя",
-  "Ошибка при загрузке статей": "Ошибка при загрузке статей"
+  "Ошибка при загрузке статей": "Ошибка при загрузке статей",
+  "Админка": "Админка"
 }
 
