--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -48,7 +48,8 @@
   "John Doe": "John Doe",
   "Создать статью": "Создать статью",
   "Профиль пользователя": "Профиль пользователя",
-  "Ошибка при загрузке статей": "Ошибка при загрузке статей"
+  "Ошибка при загрузке статей": "Ошибка при загрузке статей",
+  "Админка": "Админка"
 }
 
 
