add rating entity

--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -49,7 +49,9 @@
   "Создать статью": "Создать статью",
   "Профиль пользователя": "Профиль пользователя",
   "Ошибка при загрузке статей": "Ошибка при загрузке статей",
-  "Админка": "Админка"
+  "Админка": "Админка",
+  "Ваш отзыв": "Ваш отзыв",
+  "Закрыть": "Закрыть"
 }
 
 
