--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -49,6 +49,8 @@
   "Создать статью": "Create article",
   "Профиль пользователя": "Профиль пользователя",
   "Ошибка при загрузке статей": "Ошибка при загрузке статей",
-  "Админка": "Админка"
+  "Админка": "Админка",
+  "Ваш отзыв": "Ваш отзыв",
+  "Закрыть": "Закрыть"
 }
 
