--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -51,6 +51,7 @@
   "Ошибка при загрузке статей": "Ошибка при загрузке статей",
   "Админка": "Админка",
   "Ваш отзыв": "Ваш отзыв",
-  "Закрыть": "Закрыть"
+  "Закрыть": "Закрыть",
+  "add 5": "add 5"
 }
 
