--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -51,7 +51,8 @@
   "Ошибка при загрузке статей": "Ошибка при загрузке статей",
   "Админка": "Админка",
   "Ваш отзыв": "Ваш отзыв",
-  "Закрыть": "Закрыть"
+  "Закрыть": "Закрыть",
+  "add 5": "add 5"
 }
 
 
